fixed-overlapping-contact-form-on-aboutme-section

--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@ button:hover {
 }
 
 .about {
-  position: absolute;
+  
   width: 375px;
   height: 1263px;
   color: #7f8cff;
